fix navbar button alignment

--- a/public/style.css
+++ b/public/style.css
@@ -124,7 +124,7 @@ img {
 }
 
 .header-buttons .btn {
-    height: 34px !important;
+    height: 40px !important;
     line-height: 34px !important;
     padding: 0 14px !important;
 }
